# titanic-survivor-service

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  setup.py
classification_model/: .gitignore  __init__.py  config.yml  main.py  train_pipeline.py
classification_model/config/: core.py
classification_model/data/: __init__.py  data_loader.py  data_validator.py
classification_model/features/: extract_letter.py
classification_model/model/: lr_pipeline.py
classification_model/output/model/: trained_classification_model_v0.0.1.pkl
model-package/: setup.py
model-package/classification_model/: config.yml  predict.py  train_pipeline.py
model-package/classification_model/config/: core.py
model-package/classification_model/data/: data_loader.py  data_validator.py
model-package/classification_model/model/: lr_pipeline.py
model-package/requirements/: requirements.txt
model-package/tests/: conftest.py  test_extract_letter.py  test_predict.py
requirements/: requirements.txt
tests/: test_extract_letter.py  test_predict.py
titanic-survivor-app/: pyproject.toml
titanic-survivor-app/app/: __init__.py  api.py  config.py  log_config.py  main.py
titanic-survivor-app/app/schemas/: __init__.py  health.py  predict.py
titanic-survivor-app/app/tests/: conftest.py  test_api.py
titanic-survivor-app/requirements/: requirements.txt  titanic_classification_model-1.0.0-py3-none-any.whl  titanic_classification_model-1.1.0-py3-none-any.whl
